# lwmesh

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: loop_subdivision.rs
src/: connectivity.rs  handle.rs  lib.rs  mesh.rs  mesh_io.rs  mesh_iterator.rs  property.rs
