[package]
name = "lwmesh"
version = "0.1.0"
authors = ["Thibaud Lambert <thibaud.lambert@gmail.com>"]

[features]
default = ["mesh_io"]
mesh_io = ["lwobj","nalgebra"]

[dependencies]
lwobj = {git = "https://github.com/Daepso/lwobj", version = "0.1", optional = true}
nalgebra = { version = "0.11.1", optional = true}

[[example]]
name = "loop_subdivision"
